# Godnet

./: Makefile  README.md  amd64  arm32  arm64  bot.v  cnc.v  loading_bar.v
assets/: banner.gn  plans.json
methods/: http.v  std.c  tcp.c  tcp.v  udp.v
src/: api.v  objects.v  term.v  user.v  utils.v
src/exploits/: dvr.v
