                   _________
                  / ======= \    ╔═╗╔═╗╔╦╗╔╗╔╔═╗╔╦╗
                 / __________\   ║ ╦║ ║ ║║║║║║╣  ║
                | ___________ |  ╚═╝╚═╝═╩╝╝╚╝╚═╝ ╩
                | | -       | | User: {USER}
                | |         | | Plan: {PLAN}
                | |_________| |________________________
                \=____________/   [ Godnet V1.0.0 ]    )
                / \""""""""""" \                       /
               / ::::::::::::: \                  =D-'
              (_________________)